@@ -27,7 +27,6 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Properties;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -57,9 +56,8 @@ public class WorldsDirectoryManager {
      * and saving worlds to that directory.
      */
     public WorldsDirectoryManager() throws IOException {
-        if(instance != null) {
+        if(instance != null)
             throw new IllegalStateException("Singleton WorldsDirectoryManager has already been initialized");
-        }
 
         instance = this;
 
@@ -78,12 +76,11 @@ public class WorldsDirectoryManager {
         File[] worldDirectories = saveDirectory.listFiles((dir, name) -> dir.isDirectory());
 
         assert worldDirectories != null;
-        worlds.addAll(Arrays.stream(worldDirectories).map(file -> new MirageWorld(file.getName(), file)).collect(Collectors.toList()));
+        worlds.addAll(Arrays.stream(worldDirectories).map(file -> new MirageWorld(file.getName(), file)).toList());
 
         for(MirageWorld world : worlds) {
-            if(world.getLoadOnStart()) {
+            if(world.getLoadOnStart())
                 loadWorld(world);
-            }
         }
 
         //We can only load worlds when we're in the POST-WORLD stage of the Bukkit startup sequence
@@ -256,7 +253,6 @@ public class WorldsDirectoryManager {
             return;
         }
 
-        FileUtils.deleteDirectory(worldDirectory);
         copyDirectory(saveDirectory.toPath(), worldDirectory.toPath(), world.getWorldName(), this::loadWorldToActiveDirectoryPredicate);
     }
 
@@ -392,7 +388,9 @@ public class WorldsDirectoryManager {
      * @param predicate     a predicate used to filter the files to be copied
      * @throws IOException if an I/O error occurs during the copy process
      */
-    private void copyDirectory(Path source, Path saveDirectory, String worldName, Predicate<Path> predicate) throws IOException {
+    public void copyDirectory(Path source, Path saveDirectory, String worldName, Predicate<Path> predicate) throws IOException {
+        FileUtils.deleteDirectory(saveDirectory.toFile());
+
         try(Stream<Path> stream = Files.walk(source)) {
             stream.filter(predicate).forEach(path -> {
                 try {
